kubernetes/test1/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
 name: test1
spec:
 selector:
   app: test1
 ports:
 - protocol: TCP
   port: 8080
   targetPort: 8080
