kubernetes/test1/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: test1.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test1
                port:
                  number: 8080
